fixed hacky spacing solution

--- a/src/components/Highlight.scss
+++ b/src/components/Highlight.scss
@@ -1,45 +1,56 @@
-.highlight {
+.highlight-container {
+  height: 120px;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  cursor: pointer;
-
-  .highlight-image {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    transition: width 0.5s, height 0.5s;
+  
+  .highlight {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 2em;
+    cursor: pointer;
+    transition: margin 0.5s;
+  
+    .highlight-image {
+      height: 60px;
+      width: 60px;
+      border-radius: 50%;
+      transition: width 0.5s, height 0.5s;
+    }
+    
+    .highlight-caption {
+      position: relative;
+      top: -2.5em;
+      padding: 0 0.2em;
+      border-radius: 5px;
+      opacity: 0;
+      color: white;
+      background-color: rgba(0, 0, 0, 0.7);
+      font-size: 0;
+      transform: scale(0,0);
+      transition: font-size 0.5s, opacity 0.5s, transform 0.5s;
+    }
+  
+    .highlight-image:hover {
+      height: 120px;
+      width: 120px;
+    }
   }
   
-  .highlight-caption {
-    position: relative;
-    top: -2.5em;
-    margin: 0 -999em; // hack to prevent caption names from influencing list positioning
-    padding: 0 0.2em;
-    border-radius: 5px;
-    opacity: 0;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.7);
-    font-size: large;
-    transform: scale(0,0);
-    transition: opacity 0.5s, transform 0.5s;
-  }
-
-  .highlight-image:hover {
-    height: 120px;
-    width: 120px;
+  .highlight:hover {
+    margin: 0 2em;
+  
+    .highlight-image {
+      height: 120px;
+      width: 120px;
+    }
+  
+    .highlight-caption {
+      opacity: 1;
+      font-size: large;
+      transform: scale(1,1);
+    }
   }
 }
 
-.highlight:hover {
-  .highlight-image {
-    height: 120px;
-    width: 120px;
-  }
-
-  .highlight-caption {
-    opacity: 1;
-    transform: scale(1,1);
-  }
-}
