--- a/src/components/HighlightsList.scss
+++ b/src/components/HighlightsList.scss
@@ -3,6 +3,5 @@
 	flex-direction: row;
 	align-items: center;
   justify-content: center;
-  height: 120px;
   padding: 0;
 }
